Feat: 优化代码与注释

--- a/_template_/app-style.less
+++ b/_template_/app-style.less
@@ -1,5 +1,11 @@
-/* less 模拟模块化模板 */
-
+/*
+ * @Author: HxB
+ * @Date: 2023-04-27 15:04:26
+ * @LastEditors: DoubleAm
+ * @LastEditTime: 2023-05-25 18:24:16
+ * @Description: less 模拟模块化模板
+ * @FilePath: \web_base\_template_\app-style.less
+ */
 [data-component='AppName'] {
   & {
     height: 100%;
