--- a/_template_/app-style.less
+++ b/_template_/app-style.less
@@ -2,8 +2,8 @@
  * @Author: HxB
  * @Date: 2023-04-27 15:04:26
  * @LastEditors: DoubleAm
- * @LastEditTime: 2023-05-25 18:24:16
- * @Description: less 模拟模块化模板
+ * @LastEditTime: 2023-06-16 14:53:50
+ * @Description: less 模拟 module 模板
  * @FilePath: \web_base\_template_\app-style.less
  */
 [data-component='AppName'] {
