--- a/src/views/LoginRwd/style.less
+++ b/src/views/LoginRwd/style.less
@@ -6,14 +6,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(90deg, rgba(60, 10, 30, .04) 3%, transparent 0), linear-gradient(1turn, rgba(60, 10, 30, .04) 3%, transparent 0);
+    background-image: linear-gradient(90deg, rgba(60, 10, 30, 0.04) 3%, transparent 0),
+      linear-gradient(1turn, rgba(60, 10, 30, 0.04) 3%, transparent 0);
     background-size: 20px 20px;
     background-position: center;
     background-repeat: repeat;
 
     &[data-theme='dark'] {
       background-color: #292a2e;
-      background-image: linear-gradient(90deg, rgba(195, 245, 215, .04) 3%, transparent 0), linear-gradient(1turn, rgba(195, 245, 215, .04) 3%, transparent 0);
+      background-image: linear-gradient(90deg, rgba(195, 245, 215, 0.04) 3%, transparent 0),
+        linear-gradient(1turn, rgba(195, 245, 215, 0.04) 3%, transparent 0);
     }
   }
 
@@ -158,14 +160,14 @@
     transform: translate(-50%, -50%);
     width: 75%;
     z-index: 9;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
   }
 
   .form-structure .login-box.slide-hidden {
     top: 0;
     width: 100%;
     transform: translate(-50%, 0%);
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 
     #login-btn {
       height: 100px;
@@ -192,7 +194,7 @@
     cursor: pointer;
     opacity: 1;
     visibility: visible;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
     user-select: none;
 
     &:hover {
@@ -221,7 +223,7 @@
   }
 
   .slide-hidden .form-title {
-    transition: all .3s ease;
+    transition: all 0.3s ease;
     font-size: 1rem !important;
     color: #6c757d !important;
 
@@ -239,7 +241,7 @@
     margin-top: 25px;
     opacity: 1;
     visibility: visible;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
   }
 
   .form-structure .login-box .submit-btn {
@@ -253,9 +255,9 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #EEEDED;
+    background-color: #eeeded;
     z-index: 9;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 
     &.slide-hidden {
       .bg-cubes {
@@ -342,12 +344,12 @@
     left: 50%;
     top: -20px;
     transform: translate(-50%, 0);
-    background-color: #EEEDED;
+    background-color: #eeeded;
     width: 200%;
     height: 250px;
     border-radius: 50%;
     z-index: 6;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
   }
 
   .form-structure .sign-up-box .center {
@@ -357,7 +359,7 @@
     transform: translate(-50%, -50%);
     width: 75%;
     z-index: 9;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
   }
 
   .form-structure .sign-up-box .center .form-title {
@@ -375,21 +377,20 @@
   }
 
   .input-area {
-    transition: all .3s;
+    transition: all 0.3s;
     position: relative;
     cursor: text;
 
     &:focus-within {
-
       &::before,
       &::after {
-        content: "";
+        content: '';
         position: absolute;
         top: 0;
         left: 0;
         right: 0;
         bottom: 0;
-        transition: all .5s;
+        transition: all 0.5s;
         border: 1.35px solid #ffc107;
         animation: clip-path 3s infinite linear;
         border-radius: 3px;
@@ -401,7 +402,6 @@
     }
 
     @keyframes clip-path {
-
       0%,
       100% {
         clip-path: inset(0 0 98% 0);
@@ -443,25 +443,21 @@
     }
   }
 
-
-
-
   .form-structure .sign-up-box .center .submit-btn {
-    background-color: #6B92A4;
+    background-color: #6b92a4;
     color: rgba(255, 255, 255, 0.7);
   }
 
-
   .form-structure .sign-up-box.slide-hidden {
     top: 90%;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
   }
 
   .form-structure .sign-up-box.slide-hidden .center {
     top: -50%;
     width: 100%;
     transform: translate(-50%, 0%);
-    transition: all .3s ease;
+    transition: all 0.3s ease;
 
     #sign-up-btn {
       height: 100px;
