--- a/src/views/LoginRwd/style.less
+++ b/src/views/LoginRwd/style.less
@@ -178,6 +178,41 @@
     }
   }
 
+  div.toolbox {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 5px;
+    user-select: none;
+    padding: 0;
+    color: #333;
+
+    span {
+      font-size: 0.88rem;
+      text-decoration: none;
+      cursor: pointer;
+      margin-right: -6px;
+    }
+
+    .save-account-btn {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+
+      input {
+        cursor: pointer;
+        width: 0.88rem;
+        height: 0.88rem;
+      }
+
+      span {
+        margin-top: -1px;
+        margin-left: 3px;
+        font-size: 0.88rem;
+      }
+    }
+  }
+
   .submit-btn {
     outline: none;
     letter-spacing: 5px;
@@ -382,6 +417,7 @@
     cursor: text;
 
     &:focus-within {
+
       &::before,
       &::after {
         content: '';
@@ -402,6 +438,7 @@
     }
 
     @keyframes clip-path {
+
       0%,
       100% {
         clip-path: inset(0 0 98% 0);
