--- a/src/pages/Login/style.less
+++ b/src/pages/Login/style.less
@@ -128,11 +128,41 @@
     font-size: 12px;
   }
 
-  a {
-    color: #333;
-    font-size: 14px;
-    text-decoration: none;
-    margin: 15px 0;
+  div.toolbox {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    user-select: none;
+    padding: 0;
+
+    a {
+      color: #333;
+      font-size: 14px;
+      text-decoration: none;
+      margin-right: -8px;
+    }
+
+    .save-account-btn {
+      margin-left: -5px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+
+      input {
+        cursor: pointer;
+        width: 14px;
+        height: 14px;
+      }
+
+      span {
+        margin-top: -1px;
+        margin-left: 3px;
+        font-size: 14px;
+      }
+    }
   }
 
   .container {
@@ -275,7 +305,7 @@
 
   .sign-in-container form a {
     position: relative;
-    left: 100px;
+    // left: 100px;
   }
 
   .sign-up-container {
@@ -324,6 +354,10 @@
     text-align: center;
     transform: translateY(0);
     transition: transform 0.6s ease-in-out;
+
+    h1 {
+      color: #f8f9fa;
+    }
   }
 
   .overlay-right {
