--- a/src/pages/LoginRwd/style.less
+++ b/src/pages/LoginRwd/style.less
@@ -178,6 +178,43 @@
     }
   }
 
+  div.toolbox {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 5px;
+    user-select: none;
+    padding: 0;
+    color: #333;
+
+    span {
+      font-size: 0.88rem;
+      text-decoration: none;
+      cursor: pointer;
+      margin-right: -8px;
+    }
+
+    .save-account-btn {
+      margin-left: -5px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+
+      input {
+        cursor: pointer;
+        width: 0.88rem;
+        height: 0.88rem;
+      }
+
+      span {
+        margin-top: -1px;
+        margin-left: 3px;
+        font-size: 0.88rem;
+      }
+    }
+  }
+
   .submit-btn {
     outline: none;
     letter-spacing: 5px;
