--- a/src/views/LoginRwd/style.less
+++ b/src/views/LoginRwd/style.less
@@ -182,6 +182,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 5px;
     user-select: none;
     padding: 0;
