Feat: 优化浏览器默认样式

--- a/src/views/Login/style.less
+++ b/src/views/Login/style.less
@@ -154,10 +154,13 @@
         cursor: pointer;
         width: 14px;
         height: 14px;
+        margin: 0;
+        padding: 0;
       }
 
       span {
-        margin-top: -1px;
+        display: block;
+        margin-top: -1.8px;
         margin-left: 3px;
         font-size: 14px;
       }
