--- a/src/views/LoginRwd/style.less
+++ b/src/views/LoginRwd/style.less
@@ -201,12 +201,15 @@
       align-items: center;
 
       input {
+        margin: 0;
+        padding: 0;
         cursor: pointer;
         width: 0.88rem;
         height: 0.88rem;
       }
 
       span {
+        display: block;
         margin-top: -1px;
         margin-left: 3px;
         font-size: 0.88rem;
