--- a/src/views/Login/style.less
+++ b/src/views/Login/style.less
@@ -146,19 +146,19 @@
     }
 
     .save-account-btn {
-      margin-left: -5px;
       cursor: pointer;
       display: flex;
       align-items: center;
 
       input {
+        margin: 0;
+        padding: 0;
         cursor: pointer;
         width: 14px;
         height: 14px;
       }
 
       span {
-        margin-top: -1px;
         margin-left: 3px;
         font-size: 14px;
       }
@@ -243,11 +243,11 @@
     transition: 0.5s;
   }
 
-  .focus + span::before {
+  .focus+span::before {
     top: -5px;
   }
 
-  .focus + span::after {
+  .focus+span::after {
     width: 100%;
   }
 
