--- a/src/pages/Login/style.less
+++ b/src/pages/Login/style.less
@@ -146,12 +146,13 @@
     }
 
     .save-account-btn {
-      margin-left: -5px;
       cursor: pointer;
       display: flex;
       align-items: center;
 
       input {
+        margin: 0;
+        padding: 0;
         cursor: pointer;
         width: 14px;
         height: 14px;
@@ -243,11 +244,11 @@
     transition: 0.5s;
   }
 
-  .focus + span::before {
+  .focus+span::before {
     top: -5px;
   }
 
-  .focus + span::after {
+  .focus+span::after {
     width: 100%;
   }
 
