--- a/src/pages/LoginRwd/style.less
+++ b/src/pages/LoginRwd/style.less
@@ -196,12 +196,13 @@
     }
 
     .save-account-btn {
-      margin-left: -5px;
       cursor: pointer;
       display: flex;
       align-items: center;
 
       input {
+        margin: 0;
+        padding: 0;
         cursor: pointer;
         width: 0.88rem;
         height: 0.88rem;
@@ -419,6 +420,7 @@
     cursor: text;
 
     &:focus-within {
+
       &::before,
       &::after {
         content: '';
@@ -439,6 +441,7 @@
     }
 
     @keyframes clip-path {
+
       0%,
       100% {
         clip-path: inset(0 0 98% 0);
