--- a/src/pages/LoginRwd/style.less
+++ b/src/pages/LoginRwd/style.less
@@ -1,6 +1,7 @@
 [data-component='LoginRwd'] {
   & {
     height: 100%;
+    width: 100%;
     position: relative;
     background-color: #f8f9fa;
     display: flex;
