--- a/src/_custom/css/reset.css
+++ b/src/_custom/css/reset.css
@@ -111,10 +111,10 @@ blockquote,
 q {
   quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
   content: '';
   content: none;
 }
