--- a/src/views/LoginRwd/style.less
+++ b/src/views/LoginRwd/style.less
@@ -7,8 +7,7 @@
     align-items: center;
     justify-content: center;
     background-color: #f8f9fa;
-    background-image:
-      linear-gradient(90deg, rgba(60, 10, 30, 0.05) 3%, transparent 0),
+    background-image: linear-gradient(90deg, rgba(60, 10, 30, 0.05) 3%, transparent 0),
       linear-gradient(1turn, rgba(60, 10, 30, 0.05) 3%, transparent 0);
     background-size: 20px 20px;
     background-position: calc(50% - 10px) calc(50% - 10px);
@@ -16,8 +15,7 @@
 
     &[data-theme='dark'] {
       background-color: #292a2e;
-      background-image:
-        linear-gradient(90deg, rgba(195, 245, 215, 0.05) 3%, transparent 0),
+      background-image: linear-gradient(90deg, rgba(195, 245, 215, 0.05) 3%, transparent 0),
         linear-gradient(1turn, rgba(195, 245, 215, 0.05) 3%, transparent 0);
       background-size: 20px 20px;
       background-position: calc(50% - 10px) calc(50% - 10px);
@@ -427,7 +425,6 @@
     cursor: text;
 
     &:focus-within {
-
       &::before,
       &::after {
         content: '';
@@ -448,7 +445,6 @@
     }
 
     @keyframes clip-path {
-
       0%,
       100% {
         clip-path: inset(0 0 98% 0);
