--- a/src/_custom/css/styles.less
+++ b/src/_custom/css/styles.less
@@ -3,12 +3,6 @@
   --hr-color: #555;
 }
 
-.text-wrap {
-  word-break: break-all;
-  word-wrap: break-word;
-  white-space: pre-wrap;
-}
-
 .dotted-hr {
   position: relative;
   height: 1em;
@@ -21,24 +15,33 @@
 
   margin-block: 0.5em;
 
-  &::before {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    left: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 1;
-    color: #000;
-    border-radius: 50%;
-    width: 20px;
-    height: 10px;
-    background-color: #000;
-    line-height: 1;
-    transition: left 1s ease-in-out, color 0.3s ease, border-color 0.3s ease;
-  }
+  &.awesome {
+    &::before {
+      content: "";
+      display: inline-block;
+      position: absolute;
+      left: 20px;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 1;
+      color: #000;
+      width: 14px;
+      opacity: 0.66;
+      height: 2px;
+      background-color: #000;
+      line-height: 1;
+      transition: left 1s ease-in-out, color 0.3s ease, border-color 0.3s ease;
+    }
 
-  &:hover::before {
-    left: calc(100% - 35px);
+    &:hover::before {
+      opacity: 1;
+      left: calc(100% - 30px);
+    }
   }
+}
+
+.text-wrap {
+  word-break: break-all;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
