Feat: 增加 sigi & rxjs 写法

--- a/src/_custom/css/styles.less
+++ b/src/_custom/css/styles.less
@@ -17,7 +17,7 @@
 
   &.awesome {
     &::before {
-      content: "";
+      content: '';
       display: inline-block;
       position: absolute;
       left: 20px;
