feat: 增加是否顶部对齐时间轴

--- a/src/_custom/css/xxx.css
+++ b/src/_custom/css/xxx.css
@@ -507,6 +507,7 @@ ul.xxx-timeline {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    /* top: var(--timeline-circle-size); */
     left: calc(var(--timeline-width) / 2);
     width: var(--timeline-circle-size);
     height: var(--timeline-circle-size);
